Bug 160976 - FILESAVE RTF Footer content lost after saving from DOCX to RTF
Summary: FILESAVE RTF Footer content lost after saving from DOCX to RTF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: high major
Assignee: Justin L
URL:
Whiteboard: target:25.2.0 target:24.8.0.2 target:...
Keywords: bibisected, bisected, dataLoss, regression
Depends on:
Blocks: RTF-Header-Footer Regressions-ooxml-handle-first-hdr-ftr
  Show dependency treegraph
 
Reported: 2024-05-07 13:19 UTC by Buovjaga
Modified: 2024-09-15 06:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
160976_firstPageHeader.odt: simple reproducer that avoids any import concerns (11.55 KB, application/vnd.oasis.opendocument.text)
2024-07-10 13:11 UTC, Justin L
Details
160976_firstPageHeaderRT.rtf: created by MS Word 2010 (to show how RTF should look like) (34.37 KB, application/rtf)
2024-07-10 13:17 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-05-07 13:19:21 UTC
1. Open attachment 104763 [details] from bug 82734
2. Save as RTF and reload

Footer on second page has disappeared.

Bibisected with linux-64-24.2 to 4b0fa253a4540f5461397815d290586f9ddabe61
tdf#136472 adjust ooxml import to handle first header/footer

Originally reported by Dieter in bug 137184 comment 4.
Comment 1 Justin L 2024-07-10 13:11:00 UTC
Created attachment 195205 [details]
160976_firstPageHeader.odt: simple reproducer that avoids any import concerns
Comment 2 Justin L 2024-07-10 13:17:51 UTC
Created attachment 195206 [details]
160976_firstPageHeaderRT.rtf: created by MS Word 2010 (to show how RTF should look like)
Comment 3 Commit Notification 2024-07-11 07:02:30 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0abe0f62b9913ceb77c7ac067f1074ce0395ab93

tdf#160976 rtfexport: export first header as well as default header

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2024-07-11 10:03:53 UTC
Verified, thanks

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 35e5abe8e569c67fbb0afe84afbd826373470a8c
CPU threads: 8; OS: Linux 6.9; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 5 Commit Notification 2024-07-14 22:09:57 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/70dd9daf37cc8b9add9df78f78eddd9efa391977

tdf#160976 rtfexport: export first header as well as default header

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-07-16 11:06:32 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/225c1dbab13b2492996ef0b58695540ae1c6efc9

tdf#160976 rtfexport: export first header as well as default header

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.