tdf#160976 rtfexport: export first header as well as default header

LO has never handled exporting "different first header"
ever since it was introduced in LO 4.0-ish.

In 24.2, quikee change the RTF import to default to putting
headers into "different first header" instead of "First Page Style"
with commit 4b0fa253a4540f5461397815d290586f9ddabe61,
so this existing problem has become more pronounced.

Unhandled still is any attempt to handle different even/odd pages.

This patch also reduces the number of \titlepg duplicates.

make CppunitTest_sw_rtfexport8 \
    CPPUNIT_TEST_NAME=testTdf160976_headerFooter

make CppunitTest_sw_rtfexport8 \
    CPPUNIT_TEST_NAME=testTdf160976_headerFooter2

make CppunitTest_sw_rtfexport8 \
    CPPUNIT_TEST_NAME=testTdf160976_headerFooter3

Change-Id: Idc12c57b69ff83cbdcbac3f6a469fadd8f26fe2f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170326
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit 0abe0f62b9913ceb77c7ac067f1074ce0395ab93)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170352
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170486